crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__raid_two_defenders_full_raid.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 667
expression: "Summary::summarize(&response)"

---

command_list: 
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 0
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O1
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O1
        duration: 300
        sound: "<AudioClipAddress>"
    UpdateGameView: 
        user: 
            side: Champion
            score: 1
        current_priority: User
        raid_active: true
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 8
            position: ObjectPositionIdentity { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "End Raid"
        card_anchor_nodes: 
channel_response: 
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 0
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O1
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O1
        duration: 300
        sound: "<AudioClipAddress>"
    UpdateGameView: 
        opponent: 
            side: Champion
            score: 1
        current_priority: Opponent
        raid_active: true
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 8
            position: ObjectPositionIdentity { owner: Opponent }
