crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__raid_two_defenders_retreat.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 641
expression: "Summary::summarize(&response)"

---

command_list: 
    UpdateGameView: 
        current_priority: User
        raid_active: false
    RunInParallel: 
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: User }
        MoveGameObjects: 
            id: Deck(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionDeckContainer { owner: Opponent }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
channel_response: 
    UpdateGameView: 
        current_priority: Opponent
        raid_active: false
    RunInParallel: 
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: Opponent }
        MoveGameObjects: 
            id: Deck(User)
            position: 
                sorting_key: 0
                position: ObjectPositionDeckContainer { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
