crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__score_scheme_card.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 324
expression: "Summary::run(&response)"

---

command_list: 
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 0
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 300
        sound: "<AudioClipAddress>"
    UpdateGameView: 
        user: 
            side: Champion
            score: 1
        current_priority: User
        raid_active: true
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 7
            position: ObjectPositionIdentity { owner: User }
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 7
            position: ObjectPositionIdentity { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "End Raid"
        card_anchor_nodes: 
channel_response: 
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 0
            position: ObjectPositionScoreAnimation
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O45
        duration: 300
        sound: "<AudioClipAddress>"
    UpdateGameView: 
        opponent: 
            side: Champion
            score: 1
        current_priority: Opponent
        raid_active: true
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 7
            position: ObjectPositionIdentity { owner: Opponent }
    MoveGameObjects: 
        id: O45
        position: 
            sorting_key: 7
            position: ObjectPositionIdentity { owner: Opponent }
